# rwa-natural-resources

./: .gitignore  Cargo.toml  Makefile  README.md  boscora-architecture.excalidraw  status_test.txt
.github/workflows/: deploy-gh-pages.yml
.stellar/: boscora_nft_id-testnet  boscora_oracle_id-testnet
contracts/: Cargo.toml
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs  test.rs
contracts/nft/src/tests/: test.rs
contracts/nft/test_snapshots/test/: test_complete_boscora_flow.1.json  test_unauthorized_mint.1.json
contracts/oracle/: Cargo.toml
contracts/oracle/src/: events.rs  lib.rs  types.rs
dapp/: .env.example  index.html  package.json  parse-test.ts  vite.config.ts
dapp/src/: App.css  App.tsx  i18n.ts  index.css
dapp/src/components/: AlertDialog.tsx  MapComponent.tsx
dapp/src/contracts/: soroban_boscora_nft.ts
dapp/src/hooks/: useAlertDialog.tsx  useAppTranslation.ts
dapp/src/utils/: envAssert.ts
website/: .env.example  index.html  package.json  parse-test.ts
website/public/: Reserva Bosques de Agua.kml
website/src/: App.css  App.tsx  index.css
website/src/app/: layout.tsx
website/src/app/_components/: hero-section.tsx  navbar.tsx  timeline-section.tsx
website/src/app/_components/timeline/: impact-text.tsx  index.ts  timeline-item.tsx  vertical-timeline.tsx
website/src/components/: MapComponent.tsx
website/src/styles/: globals.css
